// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button buttonTestForAction 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  position: relative;
  text-align: center;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: normal;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
      onError={[Function]}
      src="https://static.tokkobroker.com/static/img/cec.icon.svg"
      style={
        {
          "height": "16px",
          "width": "16px",
        }
      }
    >
      <img
        className="c3"
        display="normal"
        src="https://static.tokkobroker.com/static/img/cec.icon.svg"
        style={
          {
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
    <span>
      Messenger
    </span>
  </button>
</div>
`;

exports[`Button buttonWithImage 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  position: relative;
  text-align: center;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: normal;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
      onError={[Function]}
      src="https://static.tokkobroker.com/static/img/cec.icon.svg"
      style={
        {
          "height": "16px",
          "width": "16px",
        }
      }
    >
      <img
        className="c3"
        display="normal"
        src="https://static.tokkobroker.com/static/img/cec.icon.svg"
        style={
          {
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
    <span>
      Messenger
    </span>
  </button>
</div>
`;

exports[`Button collapseButtonOpen 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 10px;
  height: 10px;
}

<div
  className="c0"
>
  <button
    className="c1"
    style={
      {
        "position": "absolute",
        "right": "-23px",
        "top": "60px",
      }
    }
    type="button"
  >
    <div
      className="c2"
    >
      <i
        className="icon-atras"
        style={
          {
            "bottom": "0px",
            "fontSize": "10px",
            "height": "10px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "10px",
          }
        }
      />
    </div>
  </button>
</div>
`;

exports[`Button iconDisabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  />
</div>
`;

exports[`Button iconPrimary 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  />
</div>
`;

exports[`Button iconSecondary 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  />
</div>
`;

exports[`Button link 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button linkDisabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button linkSubtle 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button mainButton 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
    >
      <i
        className="icon-propiedades"
        style={
          {
            "bottom": "0px",
            "fontSize": "16px",
            "height": "16px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "16px",
          }
        }
      />
    </div>
    <span>
      Emprendimientos
    </span>
  </button>
</div>
`;

exports[`Button mainButtonCollapsible 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
    >
      <i
        className="icon-propiedades"
        style={
          {
            "bottom": "0px",
            "fontSize": "16px",
            "height": "16px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "16px",
          }
        }
      />
    </div>
    <span>
      Emprendimientos
    </span>
    <span
      className="icon-dropdown"
      style={
        {
          "color": "#798B97",
          "fontSize": "14px",
          "paddingTop": "4px",
          "position": "absolute",
          "right": "10px",
          "transform": "rotate(0deg)",
          "transition": "all 0.5s",
        }
      }
    />
  </button>
</div>
`;

exports[`Button mainButtonCollapsibleLarge 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
    >
      <i
        className="icon-propiedades"
        style={
          {
            "bottom": "0px",
            "fontSize": "16px",
            "height": "16px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "16px",
          }
        }
      />
    </div>
    <span>
      Emprendimientos
    </span>
    <span
      className="icon-dropdown"
      style={
        {
          "color": "#798B97",
          "fontSize": "14px",
          "paddingTop": "4px",
          "position": "absolute",
          "right": "10px",
          "transform": "rotate(0deg)",
          "transition": "all 0.5s",
        }
      }
    />
  </button>
</div>
`;

exports[`Button mainButtonCollapsibleNotActive 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
    >
      <i
        className="icon-propiedades"
        style={
          {
            "bottom": "0px",
            "fontSize": "16px",
            "height": "16px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "16px",
          }
        }
      />
    </div>
    <span>
      Emprendimientos
    </span>
    <span
      className="icon-dropdown"
      style={
        {
          "color": "#798B97",
          "fontSize": "14px",
          "paddingTop": "4px",
          "position": "absolute",
          "right": "10px",
          "transform": "rotate(0deg)",
          "transition": "all 0.5s",
        }
      }
    />
  </button>
</div>
`;

exports[`Button mainButtonIconActive 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
      style={
        {
          "color": "#DF1E02",
        }
      }
    >
      <i
        className="icon-propiedades"
        style={
          {
            "bottom": "0px",
            "fontSize": "18px",
            "height": "18px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "18px",
          }
        }
      />
    </div>
    <span
      style={
        {
          "color": "#384248",
          "fontWeight": "bold",
        }
      }
    >
      test
    </span>
  </button>
</div>
`;

exports[`Button mainButtonIconBadge 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 14px;
  display: inline-block;
  font-size: 10px;
  font-family: primary;
  text-align: center;
  font-weight: bold;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: static;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
      style={
        {
          "color": "#DF1E02",
        }
      }
    >
      <i
        className="icon-propiedades"
        style={
          {
            "bottom": "0px",
            "fontSize": "18px",
            "height": "18px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "18px",
          }
        }
      />
    </div>
    <div
      className="c3"
      style={
        {
          "left": "16px",
          "position": "absolute",
          "top": "2px",
        }
      }
    >
      20
    </div>
  </button>
</div>
`;

exports[`Button mainButtonIconBadgeFilled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: 400;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
      style={
        {
          "color": "#384248",
        }
      }
    >
      <i
        className="icon-configuracion"
        style={
          {
            "bottom": "0px",
            "fontSize": "18px",
            "height": "18px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "18px",
          }
        }
      />
    </div>
  </button>
</div>
`;

exports[`Button mainButtonIconBadgeFilledOneVariant 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: 400;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
      style={
        {
          "color": "#384248",
        }
      }
    >
      <i
        className="icon-configuracion"
        style={
          {
            "bottom": "0px",
            "fontSize": undefined,
            "height": undefined,
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": undefined,
          }
        }
      />
    </div>
  </button>
</div>
`;

exports[`Button mainButtonIconBadgeFilledOneVariant 2`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
      style={
        {
          "color": undefined,
        }
      }
    >
      <i
        className="icon-configuracion"
        style={
          {
            "bottom": "0px",
            "fontSize": undefined,
            "height": undefined,
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": undefined,
          }
        }
      />
    </div>
    <span
      className="icon-dropdown"
      onClick={[Function]}
      style={
        {
          "color": "#798B97",
          "fontSize": "14px",
          "paddingLeft": "1px",
          "paddingRight": "1px",
          "paddingTop": "4px",
          "position": "absolute",
          "right": "10px",
          "transform": "rotate(0deg)",
          "transition": "all 0.5s",
        }
      }
    />
  </button>
</div>
`;

exports[`Button mainButtonIconBadgeFilledOneVariant click 1`] = `ShallowWrapper {}`;

exports[`Button mainButtonIconBadgeWithText 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 14px;
  display: inline-block;
  font-size: 10px;
  font-family: primary;
  text-align: center;
  font-weight: bold;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: static;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
      style={
        {
          "color": "#DF1E02",
        }
      }
    >
      <i
        className="icon-propiedades"
        style={
          {
            "bottom": "0px",
            "fontSize": "18px",
            "height": "18px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "18px",
          }
        }
      />
    </div>
    <span
      style={
        {
          "color": "#384248",
          "fontWeight": "bold",
        }
      }
    >
      test
    </span>
    <div
      className="c3"
      style={
        {
          "position": "absolute",
          "right": "10px",
        }
      }
    >
      20
    </div>
  </button>
</div>
`;

exports[`Button mainIconButton 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 18px;
  height: 18px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c7 {
  display: none;
}

input:checked:not(:disabled) ~ .c6 {
  display: block;
}

.c10 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c9 {
  display: block;
}

.c14 {
  display: none;
}

input:checked:disabled ~ .c13 {
  display: block;
}

.c12 {
  display: none;
}

input:disabled:not(:checked) ~ .c11 {
  display: block;
}

<div
  className="c0 c1"
>
  <button
    className="c0 c2"
    type="button"
  >
    <div
      className="c0 c3"
    >
      <input
        className="c0 c4"
        defaultChecked={false}
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        className="c0 c5 c6 c7 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#6A88F2"
          height="15"
          rx="4"
          ry="4"
          stroke="#6A88F2"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="white"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c9 c10 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="white"
          height="15"
          rx="4"
          ry="4"
          stroke="#C1CCD0"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c11 c12 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c13 c14 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="#C1CCD0"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
    </div>
    <div
      className="c0 c15"
    >
      <i
        className="icon-propiedades"
        style={
          {
            "bottom": "0px",
            "fontSize": "18px",
            "height": "18px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "18px",
          }
        }
      />
    </div>
  </button>
</div>
`;

exports[`Button mainIconButtonActive 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 18px;
  height: 18px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 10px;
  height: 10px;
}

.c7 {
  display: none;
}

input:checked:not(:disabled) ~ .c6 {
  display: block;
}

.c10 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c9 {
  display: block;
}

.c14 {
  display: none;
}

input:checked:disabled ~ .c13 {
  display: block;
}

.c12 {
  display: none;
}

input:disabled:not(:checked) ~ .c11 {
  display: block;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <button
    className="c0 c2"
    type="button"
  >
    <div
      className="c0 c3"
    >
      <input
        className="c0 c4"
        defaultChecked={true}
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        className="c0 c5 c6 c7 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#6A88F2"
          height="15"
          rx="4"
          ry="4"
          stroke="#6A88F2"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="white"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c9 c10 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="white"
          height="15"
          rx="4"
          ry="4"
          stroke="#C1CCD0"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c11 c12 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c13 c14 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="#C1CCD0"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
    </div>
    <div
      className="c0 c15"
      style={
        {
          "color": "#384248",
        }
      }
    >
      <i
        className="icon-propiedades"
        style={
          {
            "bottom": "0px",
            "fontSize": "10px",
            "height": "10px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "10px",
          }
        }
      />
    </div>
  </button>
</div>
`;

exports[`Button outlineDisabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button outlinedDisabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  />
</div>
`;

exports[`Button primary 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button primaryDisabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button primaryOutline 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button primaryOutlineIcon 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  />
</div>
`;

exports[`Button primaryText 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button roundButton 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
    >
      <i
        className="icon-unificar"
        style={
          {
            "bottom": "0px",
            "fontSize": undefined,
            "height": undefined,
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": undefined,
          }
        }
      />
    </div>
    <span>
      Label
    </span>
  </button>
</div>
`;

exports[`Button roundButtonColourFeedback 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
    >
      <i
        className="icon-check"
        style={
          {
            "bottom": "0px",
            "fontSize": undefined,
            "height": undefined,
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": undefined,
          }
        }
      />
    </div>
    <span>
      Label
    </span>
  </button>
</div>
`;

exports[`Button roundButtonDisabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
    >
      <i
        className="icon-unificar"
        style={
          {
            "bottom": "0px",
            "fontSize": undefined,
            "height": undefined,
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": undefined,
          }
        }
      />
    </div>
    <span>
      Label
    </span>
  </button>
</div>
`;

exports[`Button secondary 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button secondaryOutlineIcon 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  />
</div>
`;

exports[`Button secondaryOutlinedIcon 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button secondaryText 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button subtleButton 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button subtleIcon 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  />
</div>
`;

exports[`Button subtleIconDisabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  />
</div>
`;

exports[`Button subtleText 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button textDisabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button userButton 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

<div
  className="c0"
>
  <button
    className="c1"
    style={
      {
        "backgroundColor": "#798B97",
      }
    }
    type="button"
  >
    <span
      className="icon-contactos"
      style={
        {
          "fontSize": "24px",
        }
      }
    />
    <span>
      Nombre Usuario
    </span>
  </button>
</div>
`;

exports[`Button userButtonWithImage 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  position: relative;
  text-align: center;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: normal;
}

<div
  className="c0"
>
  <button
    className="c1"
    type="button"
  >
    <div
      className="c2"
      onError={[Function]}
      src="https://images.pexels.com/photos/1133957/pexels-photo-1133957.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
    >
      <img
        className="c3"
        display="normal"
        src="https://images.pexels.com/photos/1133957/pexels-photo-1133957.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
      />
    </div>
    <span>
      Nombre Usuario
    </span>
  </button>
</div>
`;
